Updated init ripo

--- a/user-prefs.html
+++ b/user-prefs.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="css/user-pref.css">
     <title>user preferences </title>
 </head>
 <body>
-    
+ <script src="js/user-pref.js"></script>   
 </body>
 </html>
