Reorganization after the cr

--- a/html/map.html
+++ b/html/map.html
@@ -17,6 +17,6 @@
     </footer>
     <script src="/js/utilService.js"></script>
     <script src="/js/userService.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="/js/map_controller.js"></script>
 </body>
 </html>
