Fix model function for adding location

--- a/html/places.html
+++ b/html/places.html
@@ -30,6 +30,13 @@
             </ul>
         </section>
 
+        <dialog class="modal">
+            <form method="dialog" onsubmit="onAddPlace(this)">
+                <input name="placeName" type="text" id="placeName" placeholder="Whats the Name of the Place?">
+                <button class="close-btn" >x</button>
+            </form>
+        </dialog>
+
         <nav class="paging" alt="navigation links">
             <a href="/html/user-prefs.html">User Preferences📃</a>
             <a href="/html/index.html">Home Page 🏠</a>
